# nixconfig

./: .gitmodules  .sops.yaml  README.md  Session.vim  \  configuration.nix  deploy_home.sh  deploy_os.sh  flake.fake  hardware-configuration.nix  home-manager.nix  home.nix  home.nix.host.backup.3  home.nix.host.backup.4  manim.nix  nixconfig  nvim.nix  result  stuff
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 381wfsg7v1rqnsbk8sf8fxz3b9xijlxg-source  7az9p4s2kq7i7x98llpvijn12i76g6jr-source  8h2al07275gym4f0nmf3pc693vpsx2n7-source  lij1v3njrvp0n5qzvamh4r5i9588csq9-source  mzi2dvks0a52mmbhgxc43nlxa4pi6r7p-source  rq5f5kgwmrcxys1bq3s5704qg1ala8i3-source
dotfiles/: Xmodmap  lvim.config.lua  monitors.sh  vimrc  xinitrc  xmonad.hs
dotfiles/.xmonad/: MyXmonad.cabal  xmobar.hs  xmonad-start.sh  xmonad-starthook.sh  xmonad.hs
dotfiles/.xmonad/dist-newstyle/cache/: compiler  config
dotfiles/config/kitty/: kittyy.conf
dotfiles/nvim/: init.lua  nvim01.txt
dotfiles/nvim/lua/config/: keymaps.lua  lazy.lua  options.lua
dotfiles/nvim/lua/plugins/: align.nvim.lua  chatgpt.lua  conjure-deno.lua  conjure.lua  copilot.lua  dap.lua  deno-nvim.lua  diagnostics.lua  images.lua  neo-tree.lua  which-key.lua
dotfiles/otherfiles/: .ghci  .gitignore  .summoner.toml  .zshrc
dotfiles/otherfiles/.doom.d/: config.el  custom.el  init.el  packages.el
home-manager/: flake.nix
machines/: my-autorandr.nix
nix/: chitubox-overlay.nix
services/: cloudflared.nix
(+1 files in other folders)
