cabal-version:       2.4

name:                MyXmonad
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Malte Neuss
-- maintainer:
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Main
  -- other-modules:
  -- other-extensions:
  build-depends:     base ^>=4.12.0.0
                   , xmonad
                   , xmonad-contrib
                   , containers
                   , X11
                   , directory
  -- hs-source-dirs:
  default-language:    Haskell2010
